# real-time-safety-coprocessor-supervisor

./: .gitattributes  .gitignore  README.md
bridge/: CMakeLists.txt  fault_injector.cpp  fault_injector.h  pty_bridge.cpp
docs/: architecture.md  build-and-run.md  future-work.md  implementation-plan.md  kernel-driver.md  protocol.md  qemu-linux.md  tracing.md  transport.md  verification.md  zephyr.md
ebpf/: Makefile  README.md  safety_trace.bpf.c  safety_trace_user.c
linux/configs/: qemu_arm64_safety_defconfig
linux/drivers/safety_copro/: Kconfig  Makefile  safety_copro.h  safety_copro_chrdev.c  safety_copro_debugfs.c  safety_copro_ioctl.h  safety_copro_kfifo.c  safety_copro_main.c  safety_copro_percpu.c  safety_copro_timer.c  safety_copro_trace.h  safety_copro_workqueue.c
linux/kernel-patches/: 0001-add-safety-copro-driver.patch
scripts/: 00_install_deps.sh  01_fetch_sources.sh  02_build_linux_kernel.sh  03_build_initramfs.sh  04_build_zephyr.sh  05_build_userspace.sh  06_build_ebpf.sh  07_run_qemu_linux.sh  08_run_qemu_zephyr.sh  09_run_pty_bridge.sh  10_run_demo.sh  11_collect_report.sh  99_cleanup.sh  lib.sh  run_valgrind.sh
tests/: safety_events.py  safety_fsm.py  safety_proto.py  test_checksum.py  test_fault_timeline.py  test_protocol.py  test_replay_logs.py  test_repo_checks.py  test_state_machine.py
tests/fixtures/: gen_fault_log.cpp
userspace/: CMakeLists.txt
userspace/safety-linkd/: CMakeLists.txt  main.cpp
userspace/safety-supervisord/: CMakeLists.txt  device_client.cpp  device_client.h  event_loop.cpp  event_loop.h  health_state_machine.cpp  health_state_machine.h  logger_worker.cpp  logger_worker.h  main.cpp  protocol.cpp  protocol.h  recovery_worker.cpp  recovery_worker.h  replay_mode.cpp  replay_mode.h
userspace/safetyctl/: CMakeLists.txt  commands.cpp  commands.h  main.cpp
zephyr/safety_copro_firmware/: CMakeLists.txt  prj.conf  prj_debug.conf
zephyr/safety_copro_firmware/include/: safety_app.h  safety_protocol.h
zephyr/safety_copro_firmware/src/: command_handler_task.c  fault_monitor_task.c  heartbeat_task.c  main.c  safety_protocol.c  telemetry_task.c
